--- a/RiscPkg/Control
+++ b/RiscPkg/Control
@@ -1,5 +1,5 @@
 Source: RiscPkg-Policy
-Section: Documentation
+Section: Programming
 Priority: Optional
 Licence: Free
 Maintainer: Graham Shaw <gdshaw@sagitta.demon.co.uk>
