--- a/trunk/RiscPkg/Control
+++ b/trunk/RiscPkg/Control
@@ -3,6 +3,7 @@ Section: Programming
 Priority: Optional
 Licence: Free
 Maintainer: Graham Shaw <gdshaw@sagitta.demon.co.uk>
+Autobuild: RISCOS, POSIX
 Standards-Version: 0.1.0
 Version: 0.1.0.0
 Description: The policy manual for the RISC OS Packaging Project
