--- a/RiscPkg/Control
+++ b/RiscPkg/Control
@@ -2,12 +2,13 @@ Source: RiscPkg-Policy
 Section: Programming
 Priority: Optional
 Licence: Free
-Maintainer: Graham Shaw <gdshaw@sagitta.demon.co.uk>
+Maintainer: Alan Buckley <alan_baa@hotmail.com>
 Autobuild: RISCOS, POSIX
-Standards-Version: 0.1.1
-Version: 0.1.1.0
+Standards-Version: 0.4.0
+Version: 0.5.0.0
 Description: The policy manual for the RISC OS Packaging Project
  This manual defines the standards which packages are normally expected
  to meet if they are to be accepted as part of the project.
 
 Package: RiscPkg-Policy
+Components: Manuals.RiscPkg-Policy.Policy (Moveable)
