Changed section to match modern packages

--- a/RiscPkg/Control
+++ b/RiscPkg/Control
@@ -1,5 +1,5 @@
 Source: RiscPkg-Policy
-Section: Programming
+Section: Development
 Priority: Optional
 Licence: Free
 Maintainer: Alan Buckley <alan_baa@hotmail.com>
